# cronos-ml

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: weekly_retrain.yml
checkpoints/: best_model.pt  best_recommender.pt
data/processed/: X.npy  X_ctx.npy  X_tgt.npy  meta.csv  norm_stats.json
data/raw/: activities.csv  daily_metrics.csv  profiles.json
features/: pipeline.py
models/: encoder.py  jepa.py  predictor.py  recovery_head.py
recommendation/: encoders.py  recommender.py  session_types.py  session_types_v2.py
scripts/: export_training_data.py  predict.py  retrain.py
training/: train.py  train_recommender.py
